--- a/src/pages/submit/index.module.scss
+++ b/src/pages/submit/index.module.scss
@@ -1,6 +1,5 @@
 .container {
 	margin: var(--s-7) auto;
-	width: fit-content;
 	position: relative;
 	font-size: var(--f-size-3);
 	padding-inline: var(--s-3);
